# Moneycontrol_api

./: .dockerignore  .gitignore  Dev_notes.txt  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test.py
.devcontainer/: devcontainer.json
.github/workflows/: Github_Action.yml  python-main-publish.yml  python-publish.yml  python-test-publish.yml
.trunk/: trunk.yaml
Docs/: Example.ipynb  documentation.md
Example/: Example.py
Src/: app.py
Src/Modules/: __init__.py  moneycontrol_api.py
Src/moneycontrol/: moneycontrol_api.py
Src/templates/: index.html
Test/: Test_cases.py
Webapp/: index.html  node.js  package-lock.json  package.json  script.js
Webapp/Node.js/: package-lock.json  package.json
moneycontrol/: moneycontrol_api.py
src/: app.py  moneycontrol.py
src/Modules/: __init__.py
src/moneycontrol/: Classes.py  __init__.py  moneycontrol_api copy.py  moneycontrol_api.py  moneycontrol_api_backup.py  storage_control.py  test_file.py
src/static/: api_data.json  style.css
src/templates/: index.html
