[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "moneycontrol_api"
version = "1.0.4"
authors = [
  { name="Arabian Coconut", email="x48cl9zm@duck.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]


[project.urls]
"Homepage" = "https://github.com/ArabianCoconut/Moneycontrol-api"
